UtBS: Update objectives automatically via [show_if]

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
@@ -182,41 +182,6 @@
 
     {STARTING_VILLAGES 1 30}
 
-#define VILLAGE_CONTROL_OBJECTIVE
-    [objective]
-        description= _ "You lose control (even temporarily) of more than 6 villages"
-        condition=lose
-    [/objective]
-#enddef
-#define DEFEAT_AZKOTEP_OBJECTIVE
-    [objective]
-        description= _ "Defeat Azkotep"
-        condition=win
-    [/objective]
-#enddef
-#define DEFEAT_YSTARA_OBJECTIVE
-    [objective]
-        description= _ "Defeat Ystara"
-        condition=win
-    [/objective]
-#enddef
-#define HERO_DEATH_OBJECTIVE
-    [objective]
-        description= _ "Death of Kaleh"
-        condition=lose
-    [/objective]
-
-    [objective]
-        description= _ "Death of Nym"
-        condition=lose
-    [/objective]
-
-    [objective]
-        description= _ "Death of Zhul"
-        condition=lose
-    [/objective]
-#enddef
-
     #! -- setting up objectives,variables and map objects
     #! -- sets variables : $sneak_up, $defiant_death,
     #! -- $casualties_count
@@ -225,18 +190,64 @@
 
         # set starting scenario objectives
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Survive until dawn"
                 condition=win
                 show_turn_counter=yes
+                [show_if]
+                    {VARIABLE_CONDITIONAL turn_number less_than 12}
+                [/show_if]
             [/objective]
             [objective]
                 {ALTERNATIVE_OBJECTIVE_CAPTION}
                 description= _ "Defeat all undead leaders"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL turn_number less_than 12}
+                [/show_if]
             [/objective]
-            {VILLAGE_CONTROL_OBJECTIVE}
+            [objective]
+                description= _ "Defeat all undead leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL defiant_death boolean_equals yes}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat Possessed Garak"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Possessed Garak
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                {ALTERNATIVE_OBJECTIVE_CAPTION}
+                description= _ "Defeat Azkotep"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Possessed Garak
+                    [/have_unit]
+                    [have_unit]
+                        id=Azkotep
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                {ALTERNATIVE_OBJECTIVE_CAPTION}
+                description= _ "Defeat Ystara"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Possessed Garak
+                    [/have_unit]
+                    [have_unit]
+                        id=Ystara
+                    [/have_unit]
+                [/show_if]
+            [/objective]
             [objective]
                 description= _ "Death of Kaleh"
                 condition=lose
@@ -248,9 +259,16 @@
             [objective]
                 description= _ "Death of Garak"
                 condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL turn_number less_than 12}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Zhul"
+                condition=lose
+            [/objective]
+            [objective]
+                description= _ "You lose control (even temporarily) of more than 6 villages"
                 condition=lose
             [/objective]
 
@@ -1266,18 +1284,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_fails_possession"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    {DEFEAT_AZKOTEP_OBJECTIVE}
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1297,25 +1303,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_possesses_garak"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    [objective]
-                        description=_"Defeat Possessed Garak"
-                        condition=win
-                    [/objective]
-                    {DEFEAT_YSTARA_OBJECTIVE}
-                    [+objective]
-                        {ALTERNATIVE_OBJECTIVE_CAPTION}
-                    [/objective]
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1334,25 +1321,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_possesses_garak"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    [objective]
-                        description=_"Defeat Possessed Garak"
-                        condition=win
-                    [/objective]
-                    {DEFEAT_AZKOTEP_OBJECTIVE}
-                    [+objective]
-                        {ALTERNATIVE_OBJECTIVE_CAPTION}
-                    [/objective]
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1371,18 +1339,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_fails_possession"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    {DEFEAT_AZKOTEP_OBJECTIVE}
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1401,25 +1357,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_resuscitates_inside_garak"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    [objective]
-                        description=_"Defeat Possessed Garak"
-                        condition=win
-                    [/objective]
-                    {DEFEAT_AZKOTEP_OBJECTIVE}
-                    [+objective]
-                        {ALTERNATIVE_OBJECTIVE_CAPTION}
-                    [/objective]
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1438,18 +1375,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_fails_possession"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    {DEFEAT_YSTARA_OBJECTIVE}
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
         [if]
@@ -1468,25 +1393,6 @@
                 [/set_variables]
 
                 {VARIABLE event_to_fire "lich_lord_resuscitates_inside_garak"}
-
-                [objectives]
-                    summary= _ "New Objectives:"
-                    silent=no
-                    [objective]
-                        description=_"Defeat Possessed Garak"
-                        condition=win
-                    [/objective]
-                    {DEFEAT_YSTARA_OBJECTIVE}
-                    [+objective]
-                        {ALTERNATIVE_OBJECTIVE_CAPTION}
-                    [/objective]
-                    {VILLAGE_CONTROL_OBJECTIVE}
-                    {HERO_DEATH_OBJECTIVE}
-
-                    [gold_carryover]
-                        carryover_percentage=40
-                    [/gold_carryover]
-                [/objectives]
             [/then]
         [/if]
 
@@ -1527,6 +1433,8 @@
         [modify_turns]
             value=-1
         [/modify_turns]
+        [show_objectives]
+        [/show_objectives]
 
         {CLEAR_VARIABLE event_to_fire,undead_casualties,casualties_count,lich_lord,other_lord}
     [/event]
