--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -305,14 +305,46 @@
         #set starting scenario objectives
 
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Explore underground"
                 condition=win
+                [show_if]
+                    [have_unit]
+                        race=troll,dwarf
+                        count=0
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
-                description= _ "Defeat enemy leaders"
+                description= _ "Defeat troll leaders"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "dwarf"}
+                    [have_unit]
+                        canrecruit=yes
+                        race=troll
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat dwarf leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "troll"}
+                    [have_unit]
+                        canrecruit=yes
+                        race=dwarf
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat the Cloaked Figure"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Cloaked Figure
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kaleh"
@@ -326,6 +358,35 @@
                 description= _ "Death of Zhul"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Fundin"
+                condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "dwarf"}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Death of Nori"
+                condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "dwarf"}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Death of Thungar"
+                condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "troll"}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Death of Gnarl"
+                condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_race equals "troll"}
+                [/show_if]
+            [/objective]
+
 
             [gold_carryover]
                 bonus=yes
@@ -730,34 +791,6 @@
         [/message]
     [/event]
 
-#define CLOAK_KILL_OBJECTIVES
-    [objectives]
-        summary= _ "New Objectives:"
-        silent=no
-        [objective]
-            description= _ "Defeat the Cloaked Figure"
-            condition=win
-        [/objective]
-        [objective]
-            description= _ "Death of Kaleh"
-            condition=lose
-        [/objective]
-        [objective]
-            description= _ "Death of Nym"
-            condition=lose
-        [/objective]
-        [objective]
-            description= _ "Death of Zhul"
-            condition=lose
-        [/objective]
-
-        [gold_carryover]
-            bonus=yes
-            carryover_percentage=40
-        [/gold_carryover]
-    [/objectives]
-#enddef
-
     # Event 2: Entering the large cavern
 
     #player chooses one side (trolls or dwarves) then:
@@ -1069,42 +1102,6 @@
                         speaker=Troll Leader
                         message= _ "Bah! Your kind all the same. Everyone turns on trolls. But you’ll see, Griknagh will smash you all."
                     [/message]
-
-                    #set new scenario objectives
-
-                    [objectives]
-                        summary= _ "New Objectives:"
-                        silent=no
-                        [objective]
-                            description= _ "Defeat troll leaders"
-                            condition=win
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Kaleh"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Nym"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Zhul"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Fundin"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Nori"
-                            condition=lose
-                        [/objective]
-
-                        [gold_carryover]
-                            bonus=yes
-                            carryover_percentage=40
-                        [/gold_carryover]
-                    [/objectives]
                 [/command]
             [/option]
 
@@ -1127,41 +1124,6 @@
                         speaker=Dwarf Leader
                         message= _ "I knew elves couldn’t be trusted. Foolish boy, you will regret your betrayal. Taste dwarven steel!"
                     [/message]
-
-                    #set new scenario objectives
-                    [objectives]
-                        summary= _ "New Objectives:"
-                        silent=no
-                        [objective]
-                            description= _ "Defeat dwarf leaders"
-                            condition=win
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Kaleh"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Nym"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Zhul"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Thungar"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Gnarl"
-                            condition=lose
-                        [/objective]
-
-                        [gold_carryover]
-                            bonus=yes
-                            carryover_percentage=40
-                        [/gold_carryover]
-                    [/objectives]
                 [/command]
             [/option]
         [/message]
@@ -1449,6 +1411,9 @@
             x,y=40,26
             side=5
         [/capture_village]
+
+        [show_objectives]
+        [/show_objectives]
 
         [fire_event]
             name=queue_battle_events
@@ -2466,9 +2431,8 @@
                     message= _ "Wait a moment, Zurg, we must deal with this mysterious cloaked figure before we can follow you."
                 [/message]
 
-                #set new scenario objectives
-
-                {CLOAK_KILL_OBJECTIVES}
+                [show_objectives]
+                [/show_objectives]
             [/then]
 
             [else]
@@ -2563,7 +2527,8 @@
                     message= _ "Wait a moment, Grimnir, we must deal with this mysterious cloaked figure before we can follow you."
                 [/message]
 
-                {CLOAK_KILL_OBJECTIVES}
+                [show_objectives]
+                [/show_objectives]
             [/then]
 
             [else]
