UtBS: Fix some TODOs

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -1736,18 +1736,37 @@
             speaker=Tanstafaal
             message= _ "Behold, our goddess has returned to us. All bow down to Eloh, our savior!"
         [/message]
-        #TODO: add better role-based speaker selection
-        [message]
+
+        [role]
             type_adv_tree=Quenoth Mystic
+            side=1
             [not]
                 id=Zhul
             [/not]
+            role=mystic_speaker
+        [/role]
+        [role]
+            type_adv_tree=Quenoth Fighter
             side=1
+            role=fighter_speaker
+        [/role]
+        [role]
+            type_adv_tree=Quenoth Scout
+            side=1
+            role=scout_speaker
+        [/role]
+        [role]
+            type_adv_tree=Tauroch Rider
+            side=1
+            role=rider_speaker
+        [/role]
+
+        [message]
+            role=mystic_speaker
             message= _ "The Goddess!"
         [/message]
         [message]
-            type_adv_tree=Quenoth Fighter
-            side=1
+            role=fighter_speaker
             message= _ "Forgive me my sins!"
         [/message]
         [message]
@@ -1763,21 +1782,15 @@
             message= _ "I come to you with dire news: one of you has betrayed me, and is a traitor to your cause."
         [/message]
         [message]
-            type_adv_tree=Quenoth Mystic
-            [not]
-                id=Zhul
-            [/not]
-            side=1
+            role=mystic_speaker
             message= _ "What?"
         [/message]
         [message]
-            type_adv_tree=Quenoth Scout
-            side=1
+            role=scout_speaker
             message= _ "No!"
         [/message]
         [message]
-            type_adv_tree=Tauroch Rider
-            side=1
+            role=rider_speaker
             message= _ "Who?"
         [/message]
         [message]
@@ -1807,8 +1820,7 @@
                     message= _ "Wait, my people, do not be deceived. This thing that appears by Tanstafaal’s side is not our god. I too was fooled at first, but I have come to realize by her actions that she is an impostor. When she appeared to me the night before Garak died, she told me to kill all that lived under the mountains, even the dwarves who ended up helping us. Likewise when we escaped from the caves, she appeared to me again, and told me to bow down to the humans, else she would destroy me. Never has Eloh threatened one of us or dictated our actions."
                 [/message]
                 [message]
-                    type_adv_tree=Quenoth Fighter,Quenoth Scout
-                    side=1
+                    role=fighter_speaker
                     message= _ "Why should we trust you? We have not heard Eloh’s words directly. Only now that you have led us into this folly has Eloh appeared to us."
                 [/message]
                 [message]
@@ -1822,8 +1834,7 @@
                     message= _ "Wait, my people, do not be deceived. This thing that appears by Tanstafaal’s side is not our god. I too was fooled at first, but I have come to realize by her actions that she is an impostor. When she appeared to me the night before Garak died, she told me to kill all that lived under the mountains, even the trolls who ended up helping us. Likewise when we escaped from the caves, she appeared to me again, and told me to bow down to the humans, else she would destroy me. Never has Eloh threatened one of us or dictated our actions."
                 [/message]
                 [message]
-                    type_adv_tree=Quenoth Fighter,Quenoth Scout
-                    side=1
+                    role=fighter_speaker
                     message= _ "Why should we trust you? We have not heard these words directly. Only now that you have led us into this folly has she appeared to us."
                 [/message]
                 [message]
