UtBS: Fix some TODOs

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -270,19 +270,6 @@
         [ai]
             aggression=0.90
             caution=0.10
-
-#ifdef WIP
-            # TODO: make assassin attack Kaleh more than other units
-            # This goal doesn't have that effect
-
-            [goal]
-                name=target
-                [criteria]
-                    id=Kaleh
-                [/criteria]
-                value=20
-            [/goal]
-#endif
         [/ai]
     [/side]
 
@@ -2088,6 +2075,19 @@
             [/modifications]
         [/unit]
 
+        [micro_ai]
+            side=7
+            ai_type=assassin
+            action=add
+
+            [filter]
+                id=Cloaked Figure
+            [/filter]
+            [filter_second]
+                id=Kaleh
+            [/filter_second]
+        [/micro_ai]
+
         [message]
             speaker=Cloaked Figure
             image=portraits/cloaked.png
@@ -2120,11 +2120,9 @@
             {ALLY_REINFORCEMENTS}
         [/event]
 
-        #TODO 23 turns after the player entered the big cave?
-        #isn't that a little too long?
         [set_variable]
             name=assassin_turn
-            rand=13..23
+            rand=13..18
         [/set_variable]
         [event]
             name="turn $($turn_number|+$assassin_turn|)"
@@ -2562,6 +2560,12 @@
             animate=no
             fire_event=no
         [/kill]
+
+        [micro_ai]
+            side=7
+            ai_type=assassin
+            action=delete
+        [/micro_ai]
 
         [message]
             speaker=Kaleh
