--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
@@ -139,17 +139,6 @@
         [ai]
             aggression=0.90
             caution=0.10
-#ifdef WIP
-            # TODO: Make them attack Kaleh more
-            # This goal doesn't have that effec
-            [goal]
-                name=target
-                [criteria]
-                    id=Kaleh
-                [/criteria]
-                value=20
-            [/goal]
-#endif
         [/ai]
     [/side]
 
@@ -259,6 +248,25 @@
         [/objectives]
 
         {INCREASE_RECRUIT_COSTS 1}
+
+        # Try simulating tentacles preferring Kaleh as a target.
+        # No more than 2 tentacles should focus him, the others
+        # will choose other victims.
+        [micro_ai]
+            side=5
+            ai_type=simple_attack
+            action=add
+
+            [filter_second]
+                id=Kaleh
+                [not]
+                    [filter_adjacent]
+                        side=5
+                        count=3-6
+                    [/filter_adjacent]
+                [/not]
+            [/filter_second]
+        [/micro_ai]
 
         #secret tomb furnishings
         {PLACE_IMAGE items/rune-violet2.png 45 21}
@@ -1732,6 +1740,12 @@
     #at victory, clear variables:
     [event]
         name=victory
+
+        [micro_ai]
+            side=5
+            ai_type=simple_attack
+            action=delete
+        [/micro_ai]
 
         {CLEAR_VARIABLE tentacle_count}
     [/event]
