--- a/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg
@@ -54,11 +54,8 @@
         controller=ai
         {GOLD 125 150 175}
         {INCOME 15 18 21}
-#ifdef HARD
-        recruit=Deathblade,Revenant,Bone Shooter,Skeleton Rider
-#else
+
         recruit=Skeleton,Skeleton Archer,Skeleton Rider
-#endif
 
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
@@ -113,11 +110,8 @@
         controller=ai
         {GOLD 125 150 175}
         {INCOME 15 18 21}
-#ifdef HARD
-        recruit=Blood Bat,Necrophage,Wraith,Soulless
-#else
+
         recruit=Vampire Bat,Ghoul,Ghost,Walking Corpse
-#endif
 
         [ai]
             {AI_SIMPLE_ALWAYS_ASPECT aggression 0.9}
@@ -617,13 +611,12 @@
     # Instead with providing AI with higher lvl units on medium
     # and hard give it highly experienced lvl1's
 
-#ifdef NORMAL
+#ifndef EASY
     # Change the difficulty increase model from having computer
     # recruit some lvl2 and 3 units outright to advancing or
     # half-advancing recruited lvl 1. At the same time, guarantees
     # broader spectrum of opposing units, as AI advancement is random.
     # Internal variables : $factor
-    # TODO: Should this happen on HARD too (would need to change recruit list to match)
     [event]
         name=recruit
         first_time_only=no
@@ -631,15 +624,13 @@
             side=2,3,4
         [/filter]
 
-        {VARIABLE factor $unit.max_experience}
-        {VARIABLE_OP factor multiply 0.5}
-        {VARIABLE_OP factor round 0}
-        {RANDOM $factor..$unit.max_experience}
+        {VARIABLE min_experience "$(floor($unit.max_experience * {ON_DIFFICULTY 0 0.5 0.75}))"}
+        {RANDOM "$min_experience..$($unit.max_experience - 1)"}
         {VARIABLE unit.experience $random}
         [unstore_unit]
             variable=unit
         [/unstore_unit]
-        {CLEAR_VARIABLE factor}
+        {CLEAR_VARIABLE min_experience,random}
     [/event]
 #endif
 
