UtBS S2-S4: Adjust some filters and conditions

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -1161,7 +1161,7 @@
         [if]
             [have_unit]
                 side=1
-                x=28-40
+                x=28-39
                 y=22-33
                 [filter_location]
                     [not]
@@ -1169,13 +1169,6 @@
                     [/not]
                 [/filter_location]
             [/have_unit]
-            [or]
-                [have_unit]
-                    x=27-37
-                    y=30-33
-                    side=1
-                [/have_unit]
-            [/or]
 
             #!***Do wraith event***
             [then]
@@ -1395,11 +1388,8 @@
         [filter]
             side=1
             x=9-13
-            y=18-19
+            y=13-19
         [/filter]
-
-        #x coor: 9 to 13
-        #y coor: 19 to 18
 
         [terrain]
             terrain=Dd
@@ -1755,15 +1745,17 @@
 
                 [store_locations]
                     variable=spawn
-                    x=$ghost_spawn_locs[$random].x
-                    y=$ghost_spawn_locs[$random].y
-                    radius=8
                     terrain=Hd, Dd, Rr
                     [filter_adjacent_location]
                         [filter]
                             side=1
                         [/filter]
                     [/filter_adjacent_location]
+                    [and]
+                        x=$ghost_spawn_locs[$random].x
+                        y=$ghost_spawn_locs[$random].y
+                        radius=8
+                    [/and]
                 [/store_locations]
 
                 {CLEAR_VARIABLE ghost_spawn_locs}
