--- a/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
@@ -1014,10 +1014,12 @@
         [/message]
 
         [if]
-            [variable]
-                name=leaders_killed
-                numerical_equals=3
-            [/variable]
+            [not]
+                [have_unit]
+                    side=2,3,4
+                    canrecruit=yes
+                [/have_unit]
+            [/not]
 
             [then]
                 [message]
