UtBS: Update and add visual and sound effects

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -1487,6 +1487,10 @@
                 [redraw]
                 [/redraw]
 
+                [sound]
+                    name=fire.wav
+                [/sound]
+
                 [delay]
                     time=100
                 [/delay]
@@ -1674,6 +1678,10 @@
 
                 [redraw]
                 [/redraw]
+
+                [sound]
+                    name=thunderstick.ogg
+                [/sound]
 
                 [delay]
                     time=100
