--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
@@ -208,6 +208,9 @@ _ "These undead trolls fight again in death as they did in life, except this tim
 
         {INCREASE_RECRUIT_COSTS 1}
 
+        # show where to go at start
+        {PLACE_IMAGE items/gohere.png 15 7}
+
         #secret troll tomb furnishings
         {PLACE_IMAGE items/coffin-closed.png 3 28}
         {PLACE_IMAGE items/bones.png 6 24}
@@ -440,6 +443,8 @@ _ "These undead trolls fight again in death as they did in life, except this tim
             speaker=Grimnir
             message= _ "Once you are done moving your people into position, I will blow the charges."
         [/message]
+
+        {REMOVE_IMAGE 15 7}
 
         # at start of player’s next turn, blow charges and destroy wall
         [event]
@@ -823,6 +828,7 @@ _ "These undead trolls fight again in death as they did in life, except this tim
             [/filter]
             amount=25
             damage_type=fire
+            animate=yes
         [/harm_unit]
     [/event]
 
@@ -1038,6 +1044,10 @@ _ "These undead trolls fight again in death as they did in life, except this tim
                 role="Guardian Phoenix"
                 random_traits=no
             [/unit]
+
+            [sound]
+                name=flame-big.ogg
+            [/sound]
         )}
 
         [scroll_to_unit]
