--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -2338,6 +2338,9 @@
             [/filter]
             side=1
         [/modify_unit]
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
 
         [message]
             speaker=Kaleh
