--- a/data/campaigns/Under_the_Burning_Suns/units/quenoth/Youth.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/units/quenoth/Youth.cfg
@@ -319,12 +319,12 @@ _"Nym is Kaleh’s childhood friend, a young, rebellious lady with quick wits an
 #define KALEH_ANIMATIONS
     {LEADING_ANIM "units/quenoth/kaleh-lead2.png" "units/quenoth/kaleh-lead1.png" (12,-32)}
     {DEFENSE_ANIM_RANGE "units/quenoth/kaleh-defend-2.png" "units/quenoth/kaleh-defend-1.png" {SOUND_LIST:ELF_HIT} melee}
-    {DEFENSE_ANIM_FILTERED "units/quenoth/kaleh-bow-defend-2.png" "units/quenoth/kaleh-bow-defend-1.png" {SOUND_LIST:ELF_FEMALE_HIT} (
+    {DEFENSE_ANIM_FILTERED "units/quenoth/kaleh-bow-defend-2.png" "units/quenoth/kaleh-bow-defend-1.png" {SOUND_LIST:ELF_HIT} (
         [filter_second_attack]
             name=bow
         [/filter_second_attack]
     )}
-    {DEFENSE_ANIM_FILTERED "units/quenoth/kaleh-defend-2.png" "units/quenoth/kaleh-defend-1.png" {SOUND_LIST:ELF_FEMALE_HIT} (
+    {DEFENSE_ANIM_FILTERED "units/quenoth/kaleh-defend-2.png" "units/quenoth/kaleh-defend-1.png" {SOUND_LIST:ELF_HIT} (
         [filter_second_attack]
             name=bolas
         [/filter_second_attack]
