--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg
@@ -504,6 +504,10 @@
             [redraw]
             [/redraw]
 
+            [sound]
+                name=explosion.ogg
+            [/sound]
+
             [delay]
                 time=100
             [/delay]
@@ -518,6 +522,9 @@
             # Have wall shake, then be replaced by dirt, then add rubble
 
             {UTBS_SHAKE_SCREEN}
+            [sound]
+                name=rumble.ogg
+            [/sound]
 
             [terrain]
                 x=27-28
@@ -848,7 +855,13 @@
                     y=30,30,29,28,27,27,26,25
                 [/move_unit_fake]
 
+                [sound]
+                    name=explosion.ogg
+                [/sound]
                 {UTBS_SHAKE_SCREEN}
+                [sound]
+                    name=rumble.ogg
+                [/sound]
 
                 [terrain]
                     x,y=22,30
@@ -919,7 +932,13 @@
                     y=31,30,29,28,27,26,25,24,24,23
                 [/move_unit_fake]
 
+                [sound]
+                    name=explosion.ogg
+                [/sound]
                 {UTBS_SHAKE_SCREEN}
+                [sound]
+                    name=rumble.ogg
+                [/sound]
 
                 [terrain]
                     x,y=16,31
@@ -1007,7 +1026,13 @@
     # directly to main dwarf base
 
 #define BACKUP_CHARGES
+    [sound]
+        name=explosion.ogg
+    [/sound]
     {UTBS_SHAKE_SCREEN}
+    [sound]
+        name=rumble.ogg
+    [/sound]
 
     [terrain]
         x=12,12
