--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -1202,6 +1202,10 @@
             x,y=24,50
             terrain=Uu
         [/terrain]
+
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
     [/event]
 
     # Event 4b: discover exit from secret tunnel
@@ -1264,6 +1268,10 @@
             y=48,49
             terrain=Wwg
         [/terrain]
+
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
     [/event]
 
     # Event 5: Enter warded cave
@@ -1294,6 +1302,10 @@
 
         [redraw]
         [/redraw]
+
+        [sound]
+            name=magic-dark-big-miss.ogg
+        [/sound]
 
         [delay]
             time=100
@@ -1443,6 +1455,10 @@
 
         [redraw]
         [/redraw]
+
+        [sound]
+            name=heal.wav
+        [/sound]
 
         [delay]
             time=100
@@ -1751,6 +1767,9 @@
 
             [then]
                 {NAMED_UNIT 3 (Ghost) 12 42 (Novice Dani) ( _ "Novice Dani") (upkeep=free)}
+                [+unit]
+                    animate=yes
+                [/unit]
             [/then]
         [/if]
 
@@ -1763,6 +1782,9 @@
 
             [then]
                 {NAMED_UNIT 3 (Ghost) 11 41 (Novice Iona) ( _ "Novice Iona") (upkeep=free)}
+                [+unit]
+                    animate=yes
+                [/unit]
             [/then]
         [/if]
 
@@ -1775,6 +1797,9 @@
 
             [then]
                 {NAMED_UNIT 3 (Ghost) 9 43 (Novice Pior) ( _ "Novice Pior") (upkeep=free)}
+                [+unit]
+                    animate=yes
+                [/unit]
             [/then]
         [/if]
     [/event]
@@ -1878,6 +1903,10 @@
             terrain=Uu
         [/terrain]
 
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
+
         [message]
             speaker=unit
             message= _ "What do you know? A secret door!"
@@ -1927,6 +1956,10 @@
 
         [redraw]
         [/redraw]
+
+        [sound]
+            name=magic-dark-big-miss.ogg
+        [/sound]
 
         [delay]
             time=100
@@ -2156,6 +2189,10 @@
             [redraw]
             [/redraw]
 
+            [sound]
+                name=magic-dark-big-miss.ogg
+            [/sound]
+
             [delay]
                 time=100
             [/delay]
@@ -2227,6 +2264,9 @@
                     [/remove_event]
 
                     {UTBS_SHAKE_SCREEN}
+                    [sound]
+                        name=rumble.ogg
+                    [/sound]
 
                     [terrain]
                         x=9,9
@@ -2507,13 +2547,7 @@
                         message= _ "Kaleh, I think you should come up and see this."
                     [/message]
 
-                    [teleport]
-                        [filter]
-                            id=Kaleh
-                        [/filter]
-                        x=$x1
-                        y=$y1
-                    [/teleport]
+                    {MOVE_UNIT (id=Kaleh) $x1 $y1}
                 [/then]
             [/if]
 
@@ -2635,7 +2669,7 @@
 
             [kill]
                 id=Keratur
-                animate=no
+                animate=yes
                 fire_event=no
             [/kill]
 
@@ -3095,12 +3129,7 @@
                     message= _ "Am I dreaming? Is this real? I’m coming, I’m coming."
                 [/message]
 
-                [teleport]
-                    [filter]
-                        id=Kaleh
-                    [/filter]
-                    x,y=25,23
-                [/teleport]
+                {MOVE_UNIT (id=Kaleh) 25 23}
             [/then]
 
             [else]
@@ -3172,12 +3201,7 @@
 
         #troll/dwarf ally teleports to just outside of cave
 
-        [teleport]
-            [filter]
-                id=$ally_name
-            [/filter]
-            x,y=21,23
-        [/teleport]
+        {MOVE_UNIT (id=$ally_name) 21 23}
 
         [message]
             speaker=$ally_name
@@ -3443,12 +3467,7 @@
             message= _ "Well, now we’re really in for it. I hope you know what you’re doing, Kaleh."
         [/message]
 
-        [teleport]
-            [filter]
-                id=Kaleh
-            [/filter]
-            x,y=18,19
-        [/teleport]
+        {MOVE_UNIT (id=Kaleh) 18 19}
 
         {MESSAGE_DEPEND_ON_ALLY
         (
