--- a/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg
@@ -208,6 +208,9 @@ _ "These undead trolls fight again in death as they did in life, except this tim
 
         {INCREASE_RECRUIT_COSTS 1}
 
+        # show where to go at start
+        {PLACE_IMAGE items/gohere.png 15 7}
+
         #secret troll tomb furnishings
         {PLACE_IMAGE items/coffin-closed.png 3 28}
         {PLACE_IMAGE items/bones.png 6 24}
@@ -450,6 +453,8 @@ _ "These undead trolls fight again in death as they did in life, except this tim
             speaker=Grimnir
             message= _ "Once you are done moving your people into position, I will blow the charges."
         [/message]
+
+        {REMOVE_IMAGE 15 7}
 
         # at start of player’s next turn, blow charges and destroy wall
         [event]
@@ -833,6 +838,7 @@ _ "These undead trolls fight again in death as they did in life, except this tim
             [/filter]
             amount=25
             damage_type=fire
+            animate=yes
         [/harm_unit]
     [/event]
 
