--- a/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg
@@ -2304,6 +2304,9 @@
                     side=1
                 [/allied_with]
             [/filter_side]
+            [not]
+                side=1
+            [/not]
         [/filter]
 
         [endlevel]
