EI S9: add dialogue on victory

--- a/data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg
@@ -388,7 +388,10 @@
     [event]
         name=enemies defeated
 
-        # TODO: dialogue
+        [message]
+            speaker=Dacyn
+            message= _ "Let us forge onward toward Lake Vrug."
+        [/message]
 
         [endlevel]
             result=victory
