DiD S1: update dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -50,7 +50,7 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my... help.”</i>"
+            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orcish menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my... help. For now, however, I ask only to rest in your town for a few days.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
